--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,11 @@
             <version>2.4</version>
         </dependency>
         <dependency>
-            <groupId>weka</groupId>
-            <artifactId>weka</artifactId>
-            <version>3.6</version>
+            <groupId>nz.ac.waikato.cms.weka</groupId>
+            <artifactId>weka-stable</artifactId>
+            <version>3.6.13</version>
         </dependency>
+
     </dependencies>
     <build>
         <plugins>
